# notmuchtauri

./: LICENSE  README.md  TASKS.md  config.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue  types.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  folder_scan.rs  idle.rs  lib.rs  llm.rs  msmtp.rs  notmuch.rs
src/assets/: main.css
src/components/: AiCopilot.vue  ComposeView.vue  FolderItem.vue  IcsEventModal.vue  MailDetail.vue  MessageNode.vue  RtmTaskModal.vue  SettingsModal.vue  ThreadView.vue
